upgrade service to java 17