@@ -163,7 +163,7 @@ task startscripts {
 # this script is autogenerated by 'gradle startscripts'
 # it starts a las2peer node providing the service '${project.property('service.name')}.${project.property('service.class')}' of this project
 # pls execute it from the root folder of your deployment, e. g. ./bin/start_network.sh
-java -cp "lib/*:service/*" i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
+java -cp "lib/*:service/*" --add-opens java.base/java.lang=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
 """
     new File("$rootDir/bin", "start_network.bat").text = """:: this script is autogenerated by 'gradle startscripts'
 :: it starts a las2peer node providing the service '${project.property('service.name')}.${project.property('service.class')}' of this project
@@ -173,7 +173,7 @@ cd %~p0
 cd ..
 set BASE=%CD%
 set CLASSPATH="%BASE%/lib/*;%BASE%/service/*;"
-java -cp %CLASSPATH% i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService('${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}') startWebConnector interactive
+java -cp %CLASSPATH% --add-opens java.base/java.lang=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService('${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}') startWebConnector interactive
 pause
 """
 }
